--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.511.0",
+    "motion": "^12.15.0",
     "next": "15.3.2",
     "postcss": "^8.5.4",
     "react": "^19.0.0",
